[tool.poetry]
name = "flappy-bird-agent-with-stimultinet"
version = "0.1.0"
description = ""
authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
generalized-rl = { path = "../GeneralizedRL/generalized-rl/" }
pipeline = { path = "../Flow-Classification-Pipeline/pipeline/" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
