[tool.poetry]
name = "flappy-bird-agent"
version = "0.1.0"
description = ""
authors = ["7000015346 <Debajyoti.Raychaudhuri@ap.sony.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
generalized-rl = { path = "../GeneralizedRL/" }
pipeline = { path = "../Flow-Classification-Pipeline/" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
